force-app/main/default/objects/Rollup_Config__mdt/Rollup_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration des rollups calcules par RollupManager.</description>
    <label>Rollup Config</label>
    <pluralLabel>Rollup Configs</pluralLabel>
</CustomObject>