force-app/main/default/objects/Rollup_Config__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cochez pour activer ce rollup. Si decoche, la configuration est ignoree.</description>
    <inlineHelpText>Cochez pour activer ce rollup. Si decoche, la configuration est ignoree.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>