force-app/main/default/objects/Rollup_Config__mdt/fields/AggregateFunction__c.field-meta.xml
<CustomField>
    <fullName>AggregateFunction__c</fullName>
    <description>Fonction d'agregation. Valeurs possibles : SUM, COUNT, MIN, MAX, AVG.</description>
    <inlineHelpText>Choisir une valeur : SUM, COUNT, MIN, MAX ou AVG.</inlineHelpText>
    <label>Aggregate Function</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUM</fullName>
                <default>true</default>
                <label>SUM</label>
            </value>
            <value>
                <fullName>COUNT</fullName>
            </value>
            <value>
                <fullName>MIN</fullName>
            </value>
            <value>
                <fullName>MAX</fullName>
            </value>
            <value>
                <fullName>AVG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>