force-app/main/default/objects/Rollup_Config__mdt/fields/ChildObject__c.field-meta.xml
<CustomField>
    <fullName>ChildObject__c</fullName>
    <description>API name de l'objet enfant qui declenche le rollup. Exemples : Opportunity, Case, Ligne_Commande__c.</description>
    <inlineHelpText>API name de l'objet enfant declencheur. Exemples : Opportunity, Case, Ligne_Commande__c.</inlineHelpText>
    <label>Child Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>