force-app/main/default/objects/Rollup_Config__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description fonctionnelle du rollup pour guider les admins.</description>
    <inlineHelpText>Description libre : objectif du rollup, contexte metier, remarques de configuration.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>