force-app/main/default/objects/Rollup_Config__mdt/fields/ExecutionOrder__c.field-meta.xml
<CustomField>
    <fullName>ExecutionOrder__c</fullName>
    <description>Ordre d'execution si plusieurs rollups existent pour le meme objet enfant. Exemples : 10, 20, 30.</description>
    <inlineHelpText>Ordre d'execution des rollups. Exemples : 10, 20, 30.</inlineHelpText>
    <label>Execution Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>