force-app/main/default/objects/Rollup_Config__mdt/fields/FieldToAggregate__c.field-meta.xml
<CustomField>
    <fullName>FieldToAggregate__c</fullName>
    <description>Champ numerique a agreger. Obligatoire sauf pour COUNT. Exemples : Amount, Montant_HT__c.</description>
    <inlineHelpText>Champ numerique a agreger. Obligatoire sauf pour COUNT. Exemples : Amount, Montant_HT__c.</inlineHelpText>
    <label>Field To Aggregate</label>
    <length>80</length>
    <type>Text</type>
</CustomField>