force-app/main/default/objects/Rollup_Config__mdt/fields/FilterCriteria__c.field-meta.xml
<CustomField>
    <fullName>FilterCriteria__c</fullName>
    <description>Clause SOQL optionnelle appliquee aux enfants, sans le mot WHERE. Exemples : StageName = 'Closed Won', IsClosed = false.</description>
    <inlineHelpText>Clause SOQL enfant sans WHERE. Exemples : StageName = 'Closed Won', IsClosed = false.</inlineHelpText>
    <label>Filter Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>