force-app/main/default/objects/Rollup_Config__mdt/fields/ParentFilter__c.field-meta.xml
<CustomField>
    <fullName>ParentFilter__c</fullName>
    <description>Clause SOQL optionnelle appliquee aux parents, sans le mot WHERE. Exemple : RecordType.DeveloperName = 'Client'.</description>
    <inlineHelpText>Clause SOQL parent sans WHERE. Exemple : RecordType.DeveloperName = 'Client'.</inlineHelpText>
    <label>Parent Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>