force-app/main/default/objects/Rollup_Config__mdt/fields/ParentObject__c.field-meta.xml
<CustomField>
    <fullName>ParentObject__c</fullName>
    <description>API name de l'objet parent a mettre a jour. Exemples : Account, Commande__c.</description>
    <inlineHelpText>API name de l'objet parent a mettre a jour. Exemples : Account, Commande__c.</inlineHelpText>
    <label>Parent Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>