force-app/main/default/objects/Rollup_Config__mdt/fields/RelationshipField__c.field-meta.xml
<CustomField>
    <fullName>RelationshipField__c</fullName>
    <description>Champ lookup ou master-detail sur l'objet enfant vers le parent. Exemples : AccountId, Commande__c.</description>
    <inlineHelpText>Champ relation sur l'enfant vers le parent. Exemples : AccountId, Commande__c.</inlineHelpText>
    <label>Relationship Field</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>