force-app/main/default/objects/Rollup_Config__mdt/fields/TargetField__c.field-meta.xml
<CustomField>
    <fullName>TargetField__c</fullName>
    <description>Champ numerique sur le parent qui recevra le resultat. Exemples : Total_CA__c, Nb_Cases__c.</description>
    <inlineHelpText>Champ numerique sur le parent qui recevra le resultat. Exemples : Total_CA__c, Nb_Cases__c.</inlineHelpText>
    <label>Target Field</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>