force-app/main/default/objects/Rollup_Config__mdt/fields/WatchedFields__c.field-meta.xml
<CustomField>
    <fullName>WatchedFields__c</fullName>
    <description>Liste des champs enfant qui declenchent un recalcul sur UPDATE, separes par des virgules. Exemples : Amount,StageName ou IsClosed.</description>
    <inlineHelpText>Champs enfant surveilles sur UPDATE, separes par virgules. Exemples : Amount,StageName ou IsClosed.</inlineHelpText>
    <label>Watched Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>